使用环境变量控制协议和接口地址

--- a/back-end/config/config.yml
+++ b/back-end/config/config.yml
@@ -1,5 +1,5 @@
 app:
-  name: CurrencyjaredBlog
+  name: jaredBlog
   port: 8081
   host: localhost
   secret: zajednički_ključ+gt4wdfhy9
@@ -9,7 +9,7 @@ database:
   port: 3306
   user: root
   password: root
-  name: currency_exchange
+  name: jaredBlog
   MaxOpenConns: 100
   MaxIdleConns: 10
   ConnMaxLifetime: 10
